// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateBookmarkedPages updated_favourite_status=false,bookmarked_pages include id 1`] = `
Array [
  Object {
    "args": Object {
      "id": "block_1",
    },
    "command": "listRemove",
    "id": "space_view_1",
    "path": Array [
      "bookmarked_pages",
    ],
    "table": "space_view",
  },
]
`;

exports[`updateBookmarkedPages updated_favourite_status=true,bookmarked_pages ! include id 1`] = `
Array [
  Object {
    "args": Object {
      "id": "block_1",
    },
    "command": "listAfter",
    "id": "space_view_1",
    "path": Array [
      "bookmarked_pages",
    ],
    "table": "space_view",
  },
]
`;
